--- a/src/index.scss
+++ b/src/index.scss
@@ -203,6 +203,6 @@ body {
   
 }
 
-.navbar-light .navbar-toggler-icon {
-  background-image:url('./images/icon-close.svg') ;
-}
+// .navbar-light .navbar-toggler-icon {
+//   background-image:url('./images/icon-close.svg') ;
+// }
